@@ -10,3 +10,4 @@ SETTINGS_VIEW = get_settings('.view')
 SETTINGS_GEOMETRY = get_settings('.geometry')
 SETTINGS_PLUGINS = get_settings('.plugins')
 SETTINGS_TWITTER = get_settings('.plugins.twitter')
+SETTINGS_FACEBOOK = get_settings('.plugins.facebook')
